# abra_autonomous_sim

src/control/abra_stanley_controller/: package.xml  setup.cfg  setup.py
src/control/abra_stanley_controller/abra_stanley_controller/: abra_stanley_controller_node.py
src/control/abra_vehicle_control/: package.xml  setup.cfg  setup.py
src/control/abra_vehicle_control/abra_vehicle_control/: abra_vehicle_controller_node.py
src/drivers/abra_joy/: package.xml  setup.cfg  setup.py
src/drivers/abra_joy/abra_joy/: abra_joy_node.py
src/interfaces/abra_interfaces/: CMakeLists.txt  package.xml
src/interfaces/abra_interfaces/msg/: AbraControllerState.msg  AbraDetectedObjects.msg  AbraPath.msg  AbraState.msg  AbraVehicleControl.msg  DetectedTrafficSign.msg
src/localization/abra_localizer/: package.xml  setup.cfg  setup.py
src/mapping/LIO-SAM-ros2/: CMakeLists.txt
src/mapping/LIO-SAM-ros2/config/: params.yaml
src/mapping/lanelet2_maps/: last_map(1)(1).osm  last_map(1).osm  last_map.osm  map3.osm  map4.osm  map5.osm  map6.osm  map7.osm  map8.osm
src/planning/abra_fsm_planner/: package.xml  setup.cfg  setup.py
src/planning/abra_fsm_planner_new/: package.xml  setup.cfg  setup.py
src/planning/cubic_spline_planner/: package.xml  setup.cfg  setup.py
src/simulation/abra_description/: CMakeLists.txt  package.xml
src/simulation/abra_description/config/: abra_config.rviz
src/simulation/abra_description/launch/: abra.launch.py  spawn_robot.py
src/simulation/abra_description/urdf/: IMU.gazebo.xacro  IMU.urdf.xacro  abra.xacro  abra_model.urdf.xacro  camera.urdf.xacro  zed2.xacro
src/simulation/abra_gazebo/: CMakeLists.txt  package.xml
src/simulation/abra_gazebo/launch/: parkour.launch.py  parkour_fullsystem.launch.py  parkour_localization.launch.py  start_fullsystem_rviz.launch.py  start_localization_rviz.launch.py  start_rviz.launch.py
src/simulation/abra_gazebo/models/ENGEL/: model.config  model.sdf
src/simulation/abra_gazebo/models/KIRMIZI/: model.config  model.sdf
src/simulation/abra_gazebo/models/KIRMIZI2/: model.config  model.sdf
src/simulation/abra_gazebo/models/KIRMIZIMESH/: KIRMIZI.dae
src/simulation/abra_gazebo/models/YESIL/: model.config  model.sdf
src/simulation/abra_gazebo/models/YESIL2/: model.config  model.sdf
src/simulation/abra_gazebo/models/YESILMESH/: YESIL.dae
src/simulation/abra_gazebo/models/parkour/: model.config  model.sdf
src/simulation/abra_gazebo/scripts/: abra_teleop_key.py  spawn_dynamic_obstacle.py  spawn_traffic_lights.py
src/simulation/abra_gazebo/worlds/: parkour.world
(+4 files in other folders)
